--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -55,6 +55,7 @@ h3,
 h4,
 h5,
 h6 {
+	font-family: Neucha;
 	line-height: 1.2;
 }
 
@@ -70,8 +71,69 @@ h3 {
 	font-size: 34px;
 }
 
-.section {
+section {
 	padding: 100px 0;
 	margin: 0 auto;
 	width: 1110px;
+}
+
+.orange {
+	color: var(--color-main);
+}
+
+.color-light {
+	background-color: var(--color-light);
+}
+
+.header {
+	position: relative;
+}
+
+.header::before {
+	content: '';
+	width: 100%;
+	height: 100%;
+	top: 0;
+  left: 0;
+	position: absolute;
+	background: url(../images/background.png);
+	background-repeat: no-repeat;
+  background-size: cover;
+	opacity: 0.1;
+}
+
+.header__section {
+	position: relative;
+}
+
+.header-title__image {
+	z-index: 3;
+	position: absolute;
+	height: 525px;
+	top: 45px;
+	right: -290px;
+}
+
+.header-title__title {
+	margin-bottom: 185px;
+}
+
+.header__text {
+	display: flex;
+	gap: 30px;
+}
+
+.header__text p {
+	width: 540px;
+}
+
+.btn {
+	text-decoration: none;
+	color: var(--color-white);
+	display: inline-block;
+	background-color: var(--color-active-btn);
+	margin-top: 40px;
+	padding: 12px 24px;
+	font-weight: 700;
+	text-transform: uppercase;
 }
