--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -43,8 +43,8 @@
 }
 
 a {
-	text-decoration: none;
-	color: inherit;
+  color: inherit;
+  text-decoration: none;
 }
 
 body {
@@ -60,7 +60,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   line-height: 1.2;
 }
 
@@ -90,19 +90,19 @@ h3 {
   padding: 24px;
 
   background-color: var(--color-white);
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .card:hover {
-	background-color: var(--color-main);
+  background-color: var(--color-main);
 }
 
 .orange-hover {
-	color: var(--color-main);
+  color: var(--color-main);
 }
 
 .card:hover .orange-hover {
-	color: var(--color-main-dark);
+  color: var(--color-main-dark);
 }
 
 .number {
@@ -110,16 +110,16 @@ h3 {
   margin-bottom: 40px;
 
   font-size: 60px;
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   line-height: 1;
 }
 
 .card:hover .number {
-	color: var(--color-white);
+  color: var(--color-white);
 }
 
 .card:hover .info-text {
-	color: var(--color-white);
+  color: var(--color-white);
 }
 
 .color-light {
@@ -138,7 +138,7 @@ h3 {
   width: 100%;
   height: 100%;
 
-  background: url(../images/background.png);
+  background: url("../images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.1;
@@ -200,7 +200,7 @@ h3 {
 .text {
   color: var(--color-dark);
   font-size: 16px;
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif;
   line-height: 1.6;
 }
 
@@ -222,15 +222,16 @@ h3 {
 }
 
 .navigation__title {
-	display: inline-block;
+  display: inline-block;
+  margin-bottom: 16px;
+
   color: var(--color-white);
   font-size: 52px;
-  font-family: Neucha;
+  font-family: Neucha, sans-serif;
   line-height: 120%;
-	margin-bottom: 16px;
 }
 
 .navigation-item {
-	display: inline-block;
-	flex: 0 0 350px;
+  display: inline-block;
+  flex: 0 0 350px;
 }
