--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -295,11 +295,11 @@ h3 {
   gap: 30px;
 }
 
-.effect {
+.cognitive-distortions {
   position: relative;
 }
 
-.effect::before {
+.cognitive-distortions::before {
   position: absolute;
   top: 0;
   left: 0;
@@ -330,24 +330,4 @@ h3 {
 
 .tail-left {
   flex: 1 1 50%;
-}
-
-.optimization {
-  position: relative;
-}
-
-.optimization::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  width: 100%;
-  height: 100%;
-
-  background: url("../images/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.1;
-
-  content: "";
 }
